SUBDIRS = \
Canonical_Ensemble \
Convert \
DFT_Field \
Gibbs_Ensemble \
Grand_Canonical_Ensemble \
Histogram \
Isobaric_Isothermal_Ensemble \
Parallel_Test \
TMMC \
VLCC_Fit
EXTRA_DIST = \
do_test \
do_para_diff \
reset_files \
reset_new_to_current \
run_serial_test \
run_para_diff \
run_para_test 
