SUBDIRS = \
AVB1_Methane \
Amber_Villin \
Benzene_AA_autofit \
Charmm19_ubiquitin \
Charmm27_Benzene \
Charmm27_Heme \
Charmm27_Nucleic_Acid \
Charmm27_Polyalanine \
Compass_Methanol \
DREIDING \
FENE_Hexamer \
Formamide_Scaled \
Fris_Walls \
Hard_Sphere \
NaCl_1x1x1 \
Shukla_Gasses \
Small_Peptide \
Square_Well_Chain \
TraPPE_Isomers \
TraPPE_Molecules \
Triglycerol \
UFF \
Wall_Water
