SUBDIRS = \
algorithm \
code \
database \
examples \
forcefields \
inpstyle \
input \
potentype \
utils 
EXTRA_DIST = \
citation_manual.html \
canyon_towhee.jpg \
developersmanual.html \
index.html \
references.html \
software.html \
standard_output.html \
towhee_capabilities.html \
towhee_ff.html \
towhee_parallel.html \
towhee_presentations.html \
towhee_pubs.html \
usersmanual.html
